# LibCMaker_FreeType

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  cmr_build_freetype_with_harfbuzz.cmake  lib_cmaker_freetype.cmake
ci/: ci_lib_params.sh
cmake/: FindFreetype.cmake  cmr_build_rules_freetype.cmake  cmr_find_package_freetype.cmake  cmr_find_package_freetype_custom.cmake  cmr_get_download_params_freetype.cmake
cmake/modules/: FindFreetype.cmake  cmr_build_rules_freetype.cmake  cmr_freetype_cmaker.cmake  cmr_freetype_get_download_params.cmake  cmr_get_download_params_freetype.cmake
cmake/modules/freetype-2.9.1/: CMakeLists.txt
example/TestCompileWithFreeType/: CMakeLists.txt  README.md  test_with_freetype.c
patch/freetype-2.11.0/: CMakeLists.txt
patch/freetype-2.9.1/: CMakeLists.txt
samples/TestCompileWithFreeType/: CMakeLists.txt  README.md
samples/TestCompileWithFreeType/src/: example_test.cpp
samples/TestCompileWithFreeType/test/: CMakeLists.txt
samples/ci_sample/: CMakeLists.txt
samples/ci_sample/src/: example.cpp
samples/ci_sample/test/: CMakeLists.txt
